Allow Focus when the window is minimized

TabDragging's PressSecondFingerWhileDetached/0 is still failing,
and this fails due to a corner case of focus and visibility
handling in the window system;
- the test scenario falls into a certain gesture, which will
  minimize the dragged window
  https://cs.chromium.org/chromium/src/ash/wm/workspace/workspace_window_resizer.cc?g=0&l=594
- TabDragController restores focus at the end of dragging
  https://cs.chromium.org/chromium/src/chrome/browser/ui/views/tabs/tab_drag_controller.cc?g=0&l=1433

On the classic environment, this shows the dragged window and
re-activates it, while it fails to activate on Mash, and so
it fails at
https://cs.chromium.org/chromium/src/chrome/browser/ui/views/tabs/tab_drag_controller_interactive_uitest.cc?sq=package:chromium&g=0&l=2576

This CL allows focus directly on the minimized window;
- DesktopWindowTreeHostMus shouldn't early-return if the window
  is invisible because of minimized status
- DesktopFocusRules should check the minimized status too, otherwise
  FocusController can't find the focusable / activatable windows
- TestWindowService should take care of synchronizing the window's
  show state and its visibility. The DesktopWindowTreeHostMusTest's
  case is changing the window state but not changing the visibility.
- sometimes a window is created with minimized status.
  DesktopWindowTreeHostMus::Show() needs to take care of such situation,
  otherwise it isn't starting with minimized status.

BUG=902598
TEST=the edited test case and unfiltered test case

Change-Id: Icae808806ba134a3789b39438179818011379064
Reviewed-on: https://chromium-review.googlesource.com/c/1321859
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606175}