ui/views/mus/desktop_window_tree_host_mus.cc
@@ -602,6 +602,8 @@ void DesktopWindowTreeHostMus::Show(ui::WindowShowState show_state,
     restore_window_observer_.reset();
   } else if (show_state == ui::SHOW_STATE_DEFAULT && IsMinimized()) {
     RestoreToPreminimizedState();
+  } else if (show_state == ui::SHOW_STATE_MINIMIZED && !IsMinimized()) {
+    Minimize();
   }
   // DesktopWindowTreeHostMus is unique in that it calls window()->Show() here.
   // All other implementations call window()->Show() from the constructor. This
@@ -742,7 +744,7 @@ void DesktopWindowTreeHostMus::SetShape(
 }
 
 void DesktopWindowTreeHostMus::Activate() {
-  if (!IsVisible())
+  if (!IsVisible() && !IsMinimized())
     return;
 
   // Activate() is expected to restore a minimized window.
