services/ws/test_ws/test_window_service.h
@@ -56,6 +56,8 @@ class TestWindowService : public service_manager::Service,
       std::unique_ptr<GpuInterfaceProvider> gpu_interface_provider);
 
  private:
+  class VisibilitySynchronizer;
+
   void InitForOutOfProcess();
 
   // WindowServiceDelegate:
@@ -143,6 +145,8 @@ class TestWindowService : public service_manager::Service,
   std::unique_ptr<TestHostEventDispatcher> test_host_event_dispatcher_;
 
   std::unique_ptr<HostEventQueue> host_event_queue_;
+
+  std::unique_ptr<VisibilitySynchronizer> visibility_synchronizer_;
 
   DISALLOW_COPY_AND_ASSIGN(TestWindowService);
 };
